--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -813,6 +813,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">22</td>
+                    <td class="days"><small>Jun 1st</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">45</td>
+                    <td class="winning">38</td>
+                    <td class="winning">8</td>
+                    <td class="winning">90</td>
+                    <td class="winning" id="lbw">12</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody>
+
+                                    <!-- 23-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">23</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
@@ -829,7 +851,7 @@
                     <td class="machine"></td>
                     <td class="machine" id="lbm"></td>
                 </tr>
-            </tbody>
+            </tbody> 
         </table>
         <span>National</span>
 
