--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,19 +257,19 @@
                 <p class="machine">84 - 53 - 76 - 63 - 44</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">06</h3>
+                <p class="winning">57 - 67 - 7 - 38 - 52</p>
+                <p class="machine">64 - 5 - 36 - 51 - 26</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">45 - 38 - 8 - 90 - 12</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">06</h3>
+                <p class="winning">64 - 83 - 82 - 37 - 47</p>
+                <p class="machine">34 - 2 - 85 - 17 - 59</p>        
             </article>
         </section>
     </div>
