correct to fair chance

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -267,7 +267,7 @@
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game">06</h3>
+                <h3 class="game">Fair Chance</h3>
                 <p class="winning">64 - 83 - 82 - 37 - 47</p>
                 <p class="machine">34 - 2 - 85 - 17 - 59</p>        
             </article>
