--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">friday 31/05/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">31 - 58 - 4 - 49 - 23</p>
-                <p class="machine">57 - 33 - 27 - 37 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">2 - 44 - 24 - 69 - 18</p>
-                <p class="machine">62 - 53 - 59 - 70 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">14 - 12 - 6 - 44 - 51</p>
-                <p class="machine">48 - 88 - 5 - 39 - 7</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">9 - 52 - 71 - 57 - 68</p>
-                <p class="machine">23 - 2 - 10 - 5 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">52 - 53 - 83 - 34 - 4</p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">82 - 41 - 61 - 32 - 59</p>
-                <p class="machine">73 - 16 - 37 - 19 - 23</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">saturday 01/06/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -270,6 +236,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">64 - 83 - 82 - 37 - 47</p>
                 <p class="machine">34 - 2 - 85 - 17 - 59</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">sunday 02/06/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">67 - 44 - 80 - 40 - 77</p>
+                <p class="machine">69 - 10 - 15 - 82 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">44 - 22 - 32 - 38 - 5</p>
+                <p class="machine">52 - 23 - 8 - 71 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">49 - 71 - 60 - 27 - 13</p>
+                <p class="machine">68 - 22 - 14 - 30 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
