Result JUNE 2/Sunday/2024

--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -823,11 +823,11 @@
                     <td class="winning" id="lbw">12</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">42</td>
+                    <td class="machine">83</td>
+                    <td class="machine">24</td>
+                    <td class="machine">29</td>
+                    <td class="machine" id="lbm">9</td>
                 </tr>
             </tbody>
 
