--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -230,7 +230,7 @@
             <article>
                 <h3 class="game">National</h3>
                 <p class="winning">45 - 38 - 8 - 90 - 12</p>
-                <p class="machine"></p>        
+                <p class="machine">42 - 83 - 24 - 29 - 9</p>        
             </article>
             <article>
                 <h3 class="game">Fair Chance</h3>
@@ -257,19 +257,19 @@
                 <p class="machine">68 - 22 - 14 - 30 - 70</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">13 - 30 - 51 - 36 - 19</p>
+                <p class="machine">22 - 76 - 88 - 8 - 62</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Aseda</h3>
+                <p class="winning">41 - 35 - 82 - 43 - 13</p>
+                <p class="machine">56 - 31 - 83 - 77 - 23</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Tota</h3>
+                <p class="winning">73 - 5 - 90 - 82 - 74</p>
+                <p class="machine">8 - 11 - 34 - 35 - 19</p>        
             </article>
         </section>
     </div>
