--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">saturday 01/06/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">51 - 26 - 71 - 76 - 50</p>
-                <p class="machine">36 - 30 - 62 - 68 - 53</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">73 - 57 - 1 - 9 - 63</p>
-                <p class="machine">80 - 38 - 8 - 54 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">18 - 24 - 6 - 17 - 88</p>
-                <p class="machine">84 - 53 - 76 - 63 - 44</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">57 - 67 - 7 - 38 - 52</p>
-                <p class="machine">64 - 5 - 36 - 51 - 26</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">45 - 38 - 8 - 90 - 12</p>
-                <p class="machine">42 - 83 - 24 - 29 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">64 - 83 - 82 - 37 - 47</p>
-                <p class="machine">34 - 2 - 85 - 17 - 59</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">sunday 02/06/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -270,6 +236,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">73 - 5 - 90 - 82 - 74</p>
                 <p class="machine">8 - 11 - 34 - 35 - 19</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">monday 3/06/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">33 - 10 - 45 - 39 - 41</p>
+                <p class="machine">53 - 49 - 70 - 81 - 75</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">35 - 75 - 18 - 78 - 45</p>
+                <p class="machine">61 - 67 - 19 - 58 - 60</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">36 - 44 - 35 - 80 - 64</p>
+                <p class="machine">65 - 27 - 90 - 33 - 57</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
