--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,19 +257,19 @@
                 <p class="machine">65 - 27 - 90 - 33 - 57</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Metro</h3>
+                <p class="winning">50 - 77 - 2 - 8 - 58</p>
+                <p class="machine">78 - 43 - 38 - 52 - 3</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">50 - 89 - 6 - 66 - 61</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">84 - 14 - 51 - 68 - 78</p>
+                <p class="machine">22 - 58 - 27 - 9 - 42</p>        
             </article>
         </section>
     </div>
