--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">sunday 02/06/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">67 - 44 - 80 - 40 - 77</p>
-                <p class="machine">69 - 10 - 15 - 82 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">44 - 22 - 32 - 38 - 5</p>
-                <p class="machine">52 - 23 - 8 - 71 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">49 - 71 - 60 - 27 - 13</p>
-                <p class="machine">68 - 22 - 14 - 30 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">13 - 30 - 51 - 36 - 19</p>
-                <p class="machine">22 - 76 - 88 - 8 - 62</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">41 - 35 - 82 - 43 - 13</p>
-                <p class="machine">56 - 31 - 83 - 77 - 23</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">73 - 5 - 90 - 82 - 74</p>
-                <p class="machine">8 - 11 - 34 - 35 - 19</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">monday 3/06/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -270,6 +236,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">84 - 14 - 51 - 68 - 78</p>
                 <p class="machine">22 - 58 - 27 - 9 - 42</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">tuesday 4/06/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">14 - 59 - 2 - 63 - 89</p>
+                <p class="machine">60 - 71 - 9 - 1 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">29 - 83 - 11 - 19 - 87</p>
+                <p class="machine">27 - 20 - 40 - 66 - 7</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">3 - 50 - 66 - 25 - 48</p>
+                <p class="machine">9 - 43 - 52 - 15 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
