Result JUNE 4/Tuesday/2024

--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -852,11 +852,11 @@
                     <td class="winning" id="lbw">61</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">1</td>
+                    <td class="machine">55</td>
+                    <td class="machine">72</td>
+                    <td class="machine">87</td>
+                    <td class="machine" id="lbm">86</td>
                 </tr>
             </tbody> 
 
