--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -843,6 +843,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">23</td>
+                    <td class="days"><small>Jun 4th</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">72</td>
+                    <td class="winning">23</td>
+                    <td class="winning">49</td>
+                    <td class="winning">70</td>
+                    <td class="winning" id="lbw">78</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day24-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">24</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
