--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -1612,6 +1612,27 @@
             <tbody>
                 <tr>
                     <td class="serial-num">45</td>
+                    <td class="days"><small>Jun 4th tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">46</td>
+                    <td class="winning">48</td>
+                    <td class="winning">87</td>
+                    <td class="winning">51</td>
+                    <td class="winning" id="lbw">1</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">67</td>
+                    <td class="machine">89</td>
+                    <td class="machine">85</td>
+                    <td class="machine">41</td>
+                    <td class="machine" id="lbm">76</td>
+                </tr>
+            </tbody> 
+
+            <tbody>
+                <tr>
+                    <td class="serial-num">46</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
