--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -230,7 +230,7 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">50 - 89 - 6 - 66 - 61</p>
-                <p class="machine"></p>        
+                <p class="machine">1 - 55 - 72 - 87 - 86</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
@@ -257,19 +257,19 @@
                 <p class="machine">9 - 43 - 52 - 15 - 2</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">46 - 48 - 87 - 51 - 1</p>
+                <p class="machine">67 - 89 - 85 - 41 - 76</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky G</h3>
+                <p class="winning">72 - 23 - 49 - 70 - 78</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Super</h3>
+                <p class="winning">14 - 80 - 72 - 62 - 65</p>
+                <p class="machine">33 - 27 - 1 - 71 - 29</p>        
             </article>
         </section>
     </div>
