--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -1611,6 +1611,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">45</td>
+                    <td class="days"><small>Jun 4th tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">14</td>
+                    <td class="winning">80</td>
+                    <td class="winning">72</td>
+                    <td class="winning">62</td>
+                    <td class="winning" id="lbw">65</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">33</td>
+                    <td class="machine">27</td>
+                    <td class="machine">1</td>
+                    <td class="machine">71</td>
+                    <td class="machine" id="lbm">29</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day46-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">46</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
