--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">monday 3/06/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">33 - 10 - 45 - 39 - 41</p>
-                <p class="machine">53 - 49 - 70 - 81 - 75</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">35 - 75 - 18 - 78 - 45</p>
-                <p class="machine">61 - 67 - 19 - 58 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">36 - 44 - 35 - 80 - 64</p>
-                <p class="machine">65 - 27 - 90 - 33 - 57</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">50 - 77 - 2 - 8 - 58</p>
-                <p class="machine">78 - 43 - 38 - 52 - 3</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">50 - 89 - 6 - 66 - 61</p>
-                <p class="machine">1 - 55 - 72 - 87 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">84 - 14 - 51 - 68 - 78</p>
-                <p class="machine">22 - 58 - 27 - 9 - 42</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">tuesday 4/06/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">Lucky G</h3>
                 <p class="winning">72 - 23 - 49 - 70 - 78</p>
-                <p class="machine"></p>        
+                <p class="machine">61 - 55 - 45 - 19 - 73</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
                 <p class="winning">14 - 80 - 72 - 62 - 65</p>
                 <p class="machine">33 - 27 - 1 - 71 - 29</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">wednesday 05/06/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">20 - 81 - 83 - 49 - 68</p>
+                <p class="machine">7 - 69 - 51 - 45 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">38 - 48 - 27 - 52 - 19</p>
+                <p class="machine">8 - 18 - 90 - 35 - 47</p>        
+            </article>
+            <article>
+                <h3 class="game">Vag</h3>
+                <p class="winning">10 - 17 - 37 - 82 - 39</p>
+                <p class="machine">89 - 58 - 61 - 45 - 63</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
