--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -853,11 +853,11 @@
                     <td class="winning" id="lbw">78</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">61</td>
+                    <td class="machine">55</td>
+                    <td class="machine">45</td>
+                    <td class="machine">19</td>
+                    <td class="machine" id="lbm">73</td>
                 </tr>
             </tbody> 
 
