--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -824,11 +824,11 @@
                     <td class="winning" id="lbw">4</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">44</td>
+                    <td class="machine">25</td>
+                    <td class="machine">35</td>
+                    <td class="machine">84</td>
+                    <td class="machine" id="lbm">9</td>
                 </tr>
             </tbody> 
 
