Result JUNE 5/Wednesday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,19 +257,19 @@
                 <p class="machine">89 - 58 - 61 - 45 - 63</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">16 - 26 - 64 - 60 - 80</p>
+                <p class="machine">23 - 20 - 45 - 55 - 46</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">9 - 39 - 87 - 28 - 59</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">89 - 78 - 27 - 77 - 40</p>
+                <p class="machine">5 - 54 - 11 - 39 - 30</p>        
             </article>
         </section>
     </div>
