--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -842,14 +842,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">23</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Jun 5th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">9</td>
+                    <td class="winning">39</td>
+                    <td class="winning">87</td>
+                    <td class="winning">28</td>
+                    <td class="winning" id="lbw">59</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
