Result JUNE 6/Tthursday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -12,9 +12,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Result | Baba Ijebu</title>
+    <meta name="description" content="Today Premier Lotto Baba Ijebu result">
 
     <meta property="og:title" content="Daily Result | Baba Ijebu">
-    <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT"> 
+    <meta property="og:description" content="Today Premier Lotto Baba Ijebu result"> 
     <meta property="og:image" content="https://i.postimg.cc/nzvC41Zw/vlb-day-Result-cover2.png">
     <meta property="og:image:alt" content="premier lotto winning and machine result">
     <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/GAMES/dailyResult">
@@ -23,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@visuaLottoBoard">
     <meta name="twitter:title" content="Daily Result | Baba Ijebu">
-    <meta name="twitter:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT">
+    <meta name="twitter:description" content="Today Premier Lotto Baba Ijebu result">
     <meta name="twitter:image" content="https://i.postimg.cc/nzvC41Zw/vlb-day-Result-cover2.png">
     <meta name="twitter:url" content="https://vlb.hologutibusinesscentre.com/GAMES/dailyResult">
 
@@ -206,40 +207,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">tuesday 4/06/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">14 - 59 - 2 - 63 - 89</p>
-                <p class="machine">60 - 71 - 9 - 1 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">29 - 83 - 11 - 19 - 87</p>
-                <p class="machine">27 - 20 - 40 - 66 - 7</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">3 - 50 - 66 - 25 - 48</p>
-                <p class="machine">9 - 43 - 52 - 15 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">46 - 48 - 87 - 51 - 1</p>
-                <p class="machine">67 - 89 - 85 - 41 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky G</h3>
-                <p class="winning">72 - 23 - 49 - 70 - 78</p>
-                <p class="machine">61 - 55 - 45 - 19 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">14 - 80 - 72 - 62 - 65</p>
-                <p class="machine">33 - 27 - 1 - 71 - 29</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">wednesday 05/06/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -264,12 +231,46 @@
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">9 - 39 - 87 - 28 - 59</p>
-                <p class="machine"></p>        
+                <p class="machine">50 - 90 - 65 - 36 - 62</p>        
             </article>
             <article>
                 <h3 class="game">Lucky</h3>
                 <p class="winning">89 - 78 - 27 - 77 - 40</p>
                 <p class="machine">5 - 54 - 11 - 39 - 30</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">thursday 06/06/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">85 - 12 - 34 - 6 - 81</p>
+                <p class="machine">28 - 43 - 51 - 55 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">16 - 34 - 62 - 37 - 80</p>
+                <p class="machine">21 - 63 - 7 - 31 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">85 - 12 - 34 - 6 - 81</p>
+                <p class="machine">28 - 43 - 51 - 55 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">45 - 18 - 24 - 23 - 3</p>
+                <p class="machine">49 - 47 - 9 - 5 - 14</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">53 - 73 - 84 - 29 - 21</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">20 - 58 - 4 - 82 - 68</p>
+                <p class="machine">88 - 77 - 65 - 12 - 63</p>        
             </article>
         </section>
     </div>
