--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="description" content="Visual Lotto Board is a platform that provides information related to Premier Lotto (Baba Ijebu) and Ghana lottery results. You can find past and current results on your devices through this service">
 
         <meta property="og:title" content="Visual Lotto Board - Baba Ijebu and Lotto result, yesterday and past results">
-        <meta property="og:description" content="Digital board for Premier Lotto, Baba Ijebu results, Ghana results and lotto classification chart">
+        <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu results, Ghana results and lotto classification chart">
         <meta property="og:image" content="https://i.postimg.cc/Dy4xvhtg/Visual-Lotto-Board-preview-1.png">
         <meta property="og:image:alt" content="Visual Lotto Baord logo, name and picture of game available on the webpage">
         <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/">
@@ -24,7 +24,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@VisuaLottoBoard">
         <meta name="twitter:title" content="Visual Lotto Board - Baba Ijebu and Lotto result, yesterday and past results">
-        <meta name="twitter:description" content="Digital board for Premier Lotto, Baba Ijebu results, Ghana results and lotto classification chart">
+        <meta name="twitter:description" content="Digital board for Premier Lotto Baba Ijebu results, Ghana results and lotto classification chart">
         <meta name="twitter:image" content="https://i.postimg.cc/Dy4xvhtg/Visual-Lotto-Board-preview-1.png">
         <meta name="twitter:url" content="https://vlb.hologutibusinesscentre.com/">
 
