--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -852,11 +852,11 @@
                     <td class="winning" id="lbw">21</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">58</td>
+                    <td class="machine">61</td>
+                    <td class="machine">57</td>
+                    <td class="machine">48</td>
+                    <td class="machine" id="lbm">42</td>
                 </tr>
             </tbody> 
 
