--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -207,40 +207,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">wednesday 05/06/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">20 - 81 - 83 - 49 - 68</p>
-                <p class="machine">7 - 69 - 51 - 45 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">38 - 48 - 27 - 52 - 19</p>
-                <p class="machine">8 - 18 - 90 - 35 - 47</p>        
-            </article>
-            <article>
-                <h3 class="game">Vag</h3>
-                <p class="winning">10 - 17 - 37 - 82 - 39</p>
-                <p class="machine">89 - 58 - 61 - 45 - 63</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">16 - 26 - 64 - 60 - 80</p>
-                <p class="machine">23 - 20 - 45 - 55 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">9 - 39 - 87 - 28 - 59</p>
-                <p class="machine">50 - 90 - 65 - 36 - 62</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">89 - 78 - 27 - 77 - 40</p>
-                <p class="machine">5 - 54 - 11 - 39 - 30</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">thursday 06/06/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -265,12 +231,46 @@
             <article>
                 <h3 class="game">Fortune</h3>
                 <p class="winning">53 - 73 - 84 - 29 - 21</p>
-                <p class="machine"></p>        
+                <p class="machine">58 - 61 - 57 - 48 - 42</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
                 <p class="winning">20 - 58 - 4 - 82 - 68</p>
                 <p class="machine">88 - 77 - 65 - 12 - 63</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">friday 07/06/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">53 - 44 - 78 - 27 - 23</p>
+                <p class="machine">79 - 31 - 37 - 56 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">35 - 5 - 15 - 9 - 34</p>
+                <p class="machine">11 - 85 - 12 - 62 - 54</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">48 - 32 - 3 - 12 - 87</p>
+                <p class="machine">68 - 50 - 5 - 57 - 51</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
