Result JUNE 7/Friday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -258,19 +258,19 @@
                 <p class="machine">68 - 50 - 5 - 57 - 51</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">57 - 10 - 85 - 63 - 35</p>
+                <p class="machine">27 - 6 - 56 - 68 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">65 - 9 - 21 - 10 - 35</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">vag</h3>
+                <p class="winning">40 - 45 - 4 - 23 - 12</p>
+                <p class="machine">48 - 88 - 47 - 77 - 63</p>        
             </article>
         </section>
     </div>
