Result JUNE 8/Saturday/2024

--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -846,11 +846,11 @@
                     <td class="winning" id="lbw">35</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">88</td>
+                    <td class="machine">66</td>
+                    <td class="machine">26</td>
+                    <td class="machine">63</td>
+                    <td class="machine" id="lbm">5</td>
                 </tr>
             </tbody> 
 
