--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -180,7 +180,6 @@
                     padding: 20px 0;
                 }
                 .day {
-                    /* width: 50px; */
                     font-size: medium;
                     color: #ff0000;
 
@@ -207,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">thursday 06/06/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">85 - 12 - 34 - 6 - 81</p>
-                <p class="machine">28 - 43 - 51 - 55 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">16 - 34 - 62 - 37 - 80</p>
-                <p class="machine">21 - 63 - 7 - 31 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">85 - 12 - 34 - 6 - 81</p>
-                <p class="machine">28 - 43 - 51 - 55 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">45 - 18 - 24 - 23 - 3</p>
-                <p class="machine">49 - 47 - 9 - 5 - 14</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">53 - 73 - 84 - 29 - 21</p>
-                <p class="machine">58 - 61 - 57 - 48 - 42</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">20 - 58 - 4 - 82 - 68</p>
-                <p class="machine">88 - 77 - 65 - 12 - 63</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">friday 07/06/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -265,12 +230,46 @@
             <article>
                 <h3 class="game">Bonanza</h3>
                 <p class="winning">65 - 9 - 21 - 10 - 35</p>
-                <p class="machine"></p>        
+                <p class="machine">88 - 66 - 26 - 63 - 5</p>        
             </article>
             <article>
                 <h3 class="game">vag</h3>
                 <p class="winning">40 - 45 - 4 - 23 - 12</p>
                 <p class="machine">48 - 88 - 47 - 77 - 63</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 08/06/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">70 - 46 - 47 - 29 - 76</p>
+                <p class="machine">9 - 65 - 59 - 3 - 16</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">79 - 40 - 33 - 24 - 42</p>
+                <p class="machine">71 - 9 - 67 - 12 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">44 - 76 - 8 - 36 - 21</p>
+                <p class="machine">3 - 74 - 61 - 57 - 33</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">20 - 33 - 86 - 14 - 32</p>
+                <p class="machine">67 - 88 - 39 - 27 - 41</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">10 - 1 - 9 - 77 - 75</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">62 - 46 - 82 - 13 - 22</p>
+                <p class="machine">61 - 90 - 68 - 12 - 25</p>        
             </article>
         </section>
     </div>
