--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -1633,6 +1633,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">46</td>
+                    <td class="days"><small>Jun 8th sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">79</td>
+                    <td class="winning">40</td>
+                    <td class="winning">33</td>
+                    <td class="winning">24</td>
+                    <td class="winning" id="lbw">42</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">71</td>
+                    <td class="machine">9</td>
+                    <td class="machine">67</td>
+                    <td class="machine">12</td>
+                    <td class="machine" id="lbm">6</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day47-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">47</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
