--- a/GAMES/23King.html
+++ b/GAMES/23King.html
@@ -838,6 +838,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">23</td>
+                    <td class="days"><small>Jun 8th</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">70</td>
+                    <td class="winning">46</td>
+                    <td class="winning">47</td>
+                    <td class="winning">29</td>
+                    <td class="winning" id="lbw">76</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">9</td>
+                    <td class="machine">65</td>
+                    <td class="machine">59</td>
+                    <td class="machine">3</td>
+                    <td class="machine" id="lbm">16</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day24-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">24</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
