--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -835,6 +835,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">23</td>
+                    <td class="days"><small>Jun 8th</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">10</td>
+                    <td class="winning">1</td>
+                    <td class="winning">9</td>
+                    <td class="winning">77</td>
+                    <td class="winning" id="lbw">75</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day24-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">24</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
