--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -1633,6 +1633,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">46</td>
+                    <td class="days"><small>Jun 8th sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">44</td>
+                    <td class="winning">76</td>
+                    <td class="winning">8</td>
+                    <td class="winning">36</td>
+                    <td class="winning" id="lbw">21</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">3</td>
+                    <td class="machine">74</td>
+                    <td class="machine">61</td>
+                    <td class="machine">57</td>
+                    <td class="machine" id="lbm">33</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day47-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">47</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
